# ssbl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml
include/: Console.hpp  Convert.hpp  Format.hpp  Log.hpp  Logger.hpp  String.hpp  StringOps.hpp  Time.hpp  logger.hpp
src/: Console.cpp  Convert.cpp  Format.cpp  Log.cpp  Logger.cpp  String.cpp  StringOps.cpp  Time.cpp  logger.cpp  logger.hpp  string.cpp  string.hpp
src/Examples/: Example.cpp
src/example/: example.cpp
